--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -106,7 +106,6 @@ html {
   display: flex;
   flex-direction: column;
   padding: var(--p-10);
-  margin: var(--p-10);
   border-radius: var(--content-border-radius);
   background-color: var(--rosalution-white);
 }
@@ -130,6 +129,9 @@ html {
 
 .rosalution-section-center {
   flex-grow: 2;
+
+  display: flex;
+  gap: var(--p-8);
 }
 
 .rosalution-section-header-text {
