--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -51,6 +51,7 @@ html {
   --p-8: 0.5rem;
   --p-10: 0.625rem;
   --p-16: 1rem;
+  --p-24: 1.5rem;
   --p-28: 1.75rem;
 
   scroll-padding-top: 4rem;
@@ -127,28 +128,34 @@ textarea:focus {
 #app {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   display: grid;
   grid-template-rows: auto 1fr auto;
+  grid-template-columns: auto 12.5rem;
   grid-auto-columns: 1fr;
+  gap: var(--p-10);
+
   padding: var(--p-10);
+  align-items: start;
 }
 
 app-header {
-  grid-column: 1;
+  grid-column: 1 / -1;
 }
 
 app-content {
-  grid-column: 1;
-  grid-row: 2;
+  grid-column: 1 / -1;
+  grid-row: 2 / -1;
 }
 
 app-footer {
-  grid-column: 1;
-  grid-row: 3;
+  grid-column: 1 / -1;
+  grid-row: -2 / -1;
   height: 3rem;
 }
 
 /** Design System **/
+
 .modal-background {
   position: fixed;
   top: 0;
@@ -168,42 +175,6 @@ app-footer {
   background-color: var(--rosalution-white);
   border-radius: var(--content-border-radius);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-
-/** LIGHTBOX MARKUP **/
-
-.lightbox {
-  display: none;
-
-  /* Overlay entire screen */
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-  padding: 1em;
-
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.lightbox:target {
-  display: block;
-  outline: none;
-}
-
-.lightbox span {
-  /* Full width and height */
-  display: block;
-  width: 100%;
-  height: 100%;
-
-  /* Size and position background image */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 
 /** || Typography **/
