Analyses feed landing page layout (#195)
* Rosalution's landing page's Analysis feed cards use grid to render the analyses in rosalution; footer is moved to be within the view's for easier control over page size content

* team landed on a path forward with the analysis cards in the landing feed. in progress system test cleanup

* resolving system test issue with try/catch around the clipboard call. added node in comments and moving on

* Changelog updates

* Paired with Rabab Fatima over resolving failure with empty file attachment list that appeared once resolving the pylint warning. After investigating, Rabab found FastAPI issue 'https://github.com/fastapi/fastapi/discussions/10280\#discussioncomment-12250823' which indicated that the version we were using had  this known problem. We upgraded and works as expected.  We drafted system tests to streamline verifying the changes

* How FastAPI is parsing the FormData objects differs between the content type, and needed to send differently to the backend depending if it is a multipart form type or a encoded-form type

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -49,12 +49,16 @@ html {
   --p-1: 0.25rem;
   --p-5: 0.313rem;
   --p-8: 0.5rem;
+  --p-12: 0.75rem;
+  --p-14: 0.875rem;
   --p-10: 0.625rem;
   --p-16: 1rem;
   --p-24: 1.5rem;
   --p-28: 1.75rem;
+  --p-180: 11.25rem;
 
   scroll-padding-top: 4rem;
+
 }
 
 /** || General Styles **/
@@ -63,7 +67,6 @@ body {
   font-family: "Proxima Nova", sans-serif;
   font-size: 1.125rem; /* 18px */
   background-color: var(--primary-background-color);
-
 }
 
 ul {
@@ -185,7 +188,6 @@ app-content {
 app-footer {
   grid-column: 1 / -1;
   grid-row: -2 / -1;
-  height: 3rem;
 }
 
 /** Design System **/
