[Feature] Discussions Attachments  (#196)
* attach button and styled. need to work on placement

* Attach button styling completed. Input modal loads.

* creating 3rd tab for input dialog - to attach existing evidence

* Added the Rosalution/exisiting evidence tab. Debugging why the component is not rendering

* Debugging why InputDialogExistingAttachments is not rendering with Angelina

* Fixed it, it was a mismatch in the name of the component imported :(

* Displaying existing attachments in the rosalution tab, styled the logo and attachment name, checkbox styling is wip. Paired with Angelina for a good chunk of this.

* Fixed checkbox position, commented out styling. Basic checkbox works.

* Rebased from main yesterday. Trying out W3 css tutorial. It's not making any changes to the checkbox. Getting some websocket errors as well. Unsure, maybe due to rebase?

* Added checkmark vector styling for checkbox.

* Fixed position of checkbox. Reverted styling of input checkbox.

* Fixed discussions actions row, with new attachments styling. Flex>>

* Able to attach single attachments. Made some progress on existing attachments. Investigating a Status Code: 500 Error.

* Saving new attachments in DiscussionSection.

* Able to attach multiple new attachments and display new attachments in Action bar in New Discussion Post

* Angelina cleaned up the CSS for InputDialogExistingAttachments.

* Cleaned up logs and commented code.

* Cleaned up a lot of the unused code to consolidate attachments and new discussion post content in one function. Debugged new attachments populating in the new discussion post action bar with James and Angelina.

* Pairing with Angelina to save attachments to the backend, and the delete attachment from discussion posts user experience on the frontend.

* Added Angelina's code for deleting Discussion attachments. Also, pushing up code for sending attachments to the backend. Will be cleaning that up completely, commiting for reference.

* running in

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -35,7 +35,7 @@ html {
   --primary-background-color: #F3F5F9;
   --secondary-background-color: var(--rosalution-white);
 
-  
+  --checkbox-border-radius: 5px;
   --content-border-radius: 10px;
   --input-border-radius: 15px;
   --button-border-radius: 25px;
@@ -49,12 +49,16 @@ html {
   --p-1: 0.25rem;
   --p-5: 0.313rem;
   --p-8: 0.5rem;
+  --p-12: 0.75rem;
+  --p-14: 0.875rem;
   --p-10: 0.625rem;
   --p-16: 1rem;
   --p-24: 1.5rem;
   --p-28: 1.75rem;
+  --p-180: 11.25rem;
 
   scroll-padding-top: 4rem;
+
 }
 
 /** || General Styles **/
@@ -63,7 +67,6 @@ body {
   font-family: "Proxima Nova", sans-serif;
   font-size: 1.125rem; /* 18px */
   background-color: var(--primary-background-color);
-
 }
 
 ul {
@@ -108,6 +111,7 @@ textarea {
   border: 2px solid var(--rosalution-grey-100);
   background-color: var(--secondary-background-color);
   outline: none;
+  appearance: none;
 }
 
 input:placeholder,
@@ -122,6 +126,30 @@ textarea:focus {
   border: 2px solid var(--rosalution-purple-300);
   box-shadow:  0px 0 0 4px rgba(69, 28, 137, 0.10);
 }
+
+input[type=checkbox]{
+  background-color: var(--rosalution-grey-100);
+  border-radius: var(--checkbox-border-radius);
+  border-color: var(--rosalution-purple-300);
+  border-width: 0.15rem;
+  transform: translateY(-0.25rem);
+}
+
+input[type=checkbox]:hover {
+  background-color: var(--rosalution-purple-100);
+  outline: max(2px, 0.15rem) solid var(--rosalution-purple-300);
+  outline-offset: max(2px, 0.15rem);
+}
+
+input[type=checkbox]:checked {
+  background-color: var(--rosalution-purple-200);
+}
+
+
+
+
+
+
 
 /** || Primary Grid Site Layout **/
 
@@ -151,7 +179,6 @@ app-content {
 app-footer {
   grid-column: 1 / -1;
   grid-row: -2 / -1;
-  height: 3rem;
 }
 
 /** Design System **/
