--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -146,11 +146,6 @@ input[type=checkbox]:checked {
 }
 
 
-
-
-
-
-
 /** || Primary Grid Site Layout **/
 
 #app {
@@ -173,7 +168,7 @@ app-header {
 
 app-content {
   grid-column: 1 / -1;
-  grid-row: 2 / -1;
+  grid-row: 2 / -2;
 }
 
 app-footer {
@@ -202,6 +197,13 @@ app-footer {
   background-color: var(--rosalution-white);
   border-radius: var(--content-border-radius);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.icon-button {
+  border: inherit;
+  background-color: inherit;
+  color: inherit;
+  cursor: pointer;
 }
 
 /** || Typography **/
