resolved sizing of the discussion attachments items, where it shows elipses when there is text overflow instead of pushing text to the next row. Experimented with some css for cleanup, but will be coming back to it

--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -22,6 +22,7 @@ html {
   border: none;
   border-radius: var(--content-border-radius);
   cursor: pointer;
+  max-height: 2.5rem;
 }
 
 .rosalution-button:hover{
@@ -41,6 +42,7 @@ html {
   border-radius: var(--button-border-radius);
   cursor: pointer;
   box-sizing: border-box;
+  max-height: 2.5rem
 }
 
 .primary-button:disabled {
@@ -68,6 +70,7 @@ html {
   border-style: solid;
   cursor: pointer;
   box-sizing: border-box;
+  max-height: 2.5rem
 }
 
 .menu-button {
