--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -103,7 +103,8 @@ a:active {
 }
 
 input,
-textarea {
+textarea,
+select {
   font-family: "Proxima Nova", sans-serif;
   font-size: 1.125rem; /* 18px */
   border-radius: var(--input-border-radius);
@@ -114,6 +115,15 @@ textarea {
   appearance: none;
 }
 
+select {
+  border-radius: var(--content-border-radius);
+  padding: var(--p-5);
+  border: 1px solid transparent;
+  background-color: var(--primary-background-color);
+  font-weight: 700;
+  color: var(--rosalution-purple-300);
+}
+
 input:placeholder,
 textarea::placeholder {
   color: var(--rosalution-grey-100);
@@ -121,10 +131,23 @@ textarea::placeholder {
 
 input:hover,
 input:focus,
+select:focus-visible,
 textarea:hover,
 textarea:focus {
   border: 2px solid var(--rosalution-purple-300);
   box-shadow:  0px 0 0 4px rgba(69, 28, 137, 0.10);
+}
+
+select:hover,
+select:focus,
+select:focus-within {
+  border: 1px solid var(--rosalution-purple-300);
+  box-shadow:  0px 0 0 4px rgba(69, 28, 137, 0.10);
+  background-color: var(--secondary-background-color);
+}
+
+select:focus-visible {
+  outline: var(--rosalution-purple-300) auto 2px;
 }
 
 input[type=checkbox]{
